tests/error/misc_errors/no_return_loop.err
Error: Expected return statement (at $FILE:6:4)
   | 
 4 | def while_loop(n: int, x: int, i: int) -> int:
 5 |     x  = 0
 6 |     while i < n:
   |     ^^^^^^^^^^^^
   | ...
10 |         return x
   | ^^^^^^^^^^^^^^^^ Expected return statement

Note:
   | 
 5 |     x  = 0
 6 |     while i < n:
   |           ----- Consider adding a return statement if this expression is
   |                 `False`

Guppy compilation failed due to 1 previous error
